Fix: on iOS devices, overlay isn't displayed properly.

--- a/generic/core/modal.css
+++ b/generic/core/modal.css
@@ -21,7 +21,7 @@ body.wrs_modal_open {
 }
 
 .wrs_modal_overlay.wrs_modal_ios {
-	position: absolute;
+	position: inherit;
 }
 
 .wrs_modal_title {
